--- a/biryani.html
+++ b/biryani.html
@@ -6,49 +6,52 @@
 	<title>
 		Biryani
 	</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<h1>The Biryani</h1>
-	<img src="images/biryani.jpg" alt="Biryani" width="500px">
-	<p>Chicken Biryani
-	Chicken Biryani Recipe Card
-	EmailSavePrint
-	In India, the eternal favourite for a special Sunday lunch or a party dish is definitely a perfectly layered Chicken Biryani, dum cooked to perfection! And it’s a visual delight too – a beautiful array of long-grained rice, tender chicken and pungent spices studded with fresh mint and coriander, topped with fried onions and boiled egg wedges. Chicken is a good quality protein and when combined with rice, herbs, spices and yogurt, it makes a healthy and filling one pot meal – like every classic chicken dum biryani should be. Just serve it piping hot essentially with a raita and salad or kachumber and wait for all the praises coming your way! I would also suggest trying out this recipe of Brown Rice Biryani with Chutney Chicken. 
-	</p>
-	<p>
-		<strong>Ingredients for Chicken Biryani Recipe:</strong>
-	</p>
-	<ul>
-		<li>Boneless chicken 600 grams</li>
-		<li>Basmati rice 1 1/2 cups</li>
-		<li>Oil 3 tablespoons</li>
-		<li>Cinnamon 1 inch stick</li>
-		<li>Bay leaves 2</li>
-		<li>Cloves 5-6</li>
-		<li>Cumin seeds 1 teaspoon</li>
-		<li>Green cardamoms 3-4</li>
-		<li>Onions sliced 2 medium</li>
-		<li>Green chillies slit 3</li>
-		<li>Turmeric powder 1/4 teaspoon</li>
-		<li>Tomatoes chopped 2 medium</li>
-		<li>Salt to taste</li>
-		<li>Ginger paste 3/4 teaspoon</li>
-		<li>Garlic paste 3/4 teaspoon</li>
-		<li>Red chilli powder 1/2 teaspoon</li>
-		<li>Thick yogurt 1 cup</li>
-		<li>Onions sliced and fried 3 medium</li>
-		<li>Garam masala powder 1/2 teaspoon</li>
-		<li>Ginger cut into thin strips 1 inch piece</li>
-		<li>Fresh mint leaves torn a few</li>
-		<li>Fresh coriander leaves torn a few</li>
-		<li>Milk 1/2 cup</li>
-		<li>Rose water a few drops</li>
-		<li>Eggs boiled and sliced 4</li>
-	</ul>
-	<p><strong>Method:</strong></p>
-	<p>Cut chicken in one inch pieces. Boil rice and set aside. Heat oil in a non-stick pan, add cinnamon, bay leaves, cloves, cumin seeds, green cardamoms and sauté for half a minute.</p>
-	<p>Add sliced onions and sauté. Add slit green chillies and chicken cubes and continue to sauté. Add turmeric powder and mix. Add tomatoes and salt and mix. Add ginger-garlic paste, red chilli powder and yogurt. Mix well.</p>
-	<p>Add half the fried brown onions. Add the boiled rice on top. Sprinkle garam masala powder, ginger strips, mint leaves and coriander leaves. Sprinkle milk, rose water and remaining browned onions.</p>
-	<p>Cover and cook on low heat for about ten minutes. Garnish with the egg slices and serve hot.</p>
+	<div class="container">
+		<h1>The Biryani</h1>
+		<img src="images/biryani.jpg" alt="Biryani">
+		<p>Chicken Biryani
+			Chicken Biryani Recipe Card
+			EmailSavePrint
+			In India, the eternal favourite for a special Sunday lunch or a party dish is definitely a perfectly layered Chicken Biryani, dum cooked to perfection! And it’s a visual delight too – a beautiful array of long-grained rice, tender chicken and pungent spices studded with fresh mint and coriander, topped with fried onions and boiled egg wedges. Chicken is a good quality protein and when combined with rice, herbs, spices and yogurt, it makes a healthy and filling one pot meal – like every classic chicken dum biryani should be. Just serve it piping hot essentially with a raita and salad or kachumber and wait for all the praises coming your way! I would also suggest trying out this recipe of Brown Rice Biryani with Chutney Chicken. 
+		</p>
+		<p>
+			<strong>Ingredients for Chicken Biryani Recipe:</strong>
+		</p>
+		<ul class = "list">
+			<li>Boneless chicken 600 grams</li>
+			<li>Basmati rice 1 1/2 cups</li>
+			<li>Oil 3 tablespoons</li>
+			<li>Cinnamon 1 inch stick</li>
+			<li>Bay leaves 2</li>
+			<li>Cloves 5-6</li>
+			<li>Cumin seeds 1 teaspoon</li>
+			<li>Green cardamoms 3-4</li>
+			<li>Onions sliced 2 medium</li>
+			<li>Green chillies slit 3</li>
+			<li>Turmeric powder 1/4 teaspoon</li>
+			<li>Tomatoes chopped 2 medium</li>
+			<li>Salt to taste</li>
+			<li>Ginger paste 3/4 teaspoon</li>
+			<li>Garlic paste 3/4 teaspoon</li>
+			<li>Red chilli powder 1/2 teaspoon</li>
+			<li>Thick yogurt 1 cup</li>
+			<li>Onions sliced and fried 3 medium</li>
+			<li>Garam masala powder 1/2 teaspoon</li>
+			<li>Ginger cut into thin strips 1 inch piece</li>
+			<li>Fresh mint leaves torn a few</li>
+			<li>Fresh coriander leaves torn a few</li>
+			<li>Milk 1/2 cup</li>
+			<li>Rose water a few drops</li>
+			<li>Eggs boiled and sliced 4</li>
+		</ul>
+		<p><strong>Method:</strong></p>
+		<p>Cut chicken in one inch pieces. Boil rice and set aside. Heat oil in a non-stick pan, add cinnamon, bay leaves, cloves, cumin seeds, green cardamoms and sauté for half a minute.</p>
+		<p>Add sliced onions and sauté. Add slit green chillies and chicken cubes and continue to sauté. Add turmeric powder and mix. Add tomatoes and salt and mix. Add ginger-garlic paste, red chilli powder and yogurt. Mix well.</p>
+		<p>Add half the fried brown onions. Add the boiled rice on top. Sprinkle garam masala powder, ginger strips, mint leaves and coriander leaves. Sprinkle milk, rose water and remaining browned onions.</p>
+		<p>Cover and cook on low heat for about ten minutes. Garnish with the egg slices and serve hot.</p>
+	</div>
 </body>
 </html>
