--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>The Odin Recipies</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<h1>The Odin Recipies</h1>
