--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>The Odin Recipies</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Odin Recipies</title>
+	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<h1>The Odin Recipies</h1>
-	<p>The best recipies to cook with odin</p>
-	<ul>
-		<li><a href="biryani.html">The Biryani</a></li>
-	</ul>
+	<section class="header">
+		<nav class="navbar navbar-expand-sm navbar-light bg-light">
+			<div class="container d-flex justify-content-end">
+				<a href="#" class="navbar-brand fw-bold me-auto">The Odin Recipies</a>
+				<ul class="navbar-nav">
+					<li class="nav-item"><a href="#" class="nav-link">Featured</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">Catagories</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">Tags</a></li>
+				</ul>
+			</div>
+		</nav>
+	</section>
+	<section class="content">
+		
+
+	</section>
+
+
+	<!-- Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 </html>
