Modified Some pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<section class="header">
 		<nav class="navbar navbar-expand-sm navbar-light bg-light">
 			<div class="container d-flex justify-content-end">
-				<a href="#" class="navbar-brand fw-bold me-auto">The Odin Recipies</a>
+				<a href="index.html" class="navbar-brand fw-bold me-auto">The Odin Recipies</a>
 				<ul class="navbar-nav">
 					<li class="nav-item"><a href="#" class="nav-link">Featured</a></li>
 					<li class="nav-item"><a href="#" class="nav-link">Catagories</a></li>
@@ -24,8 +24,18 @@
 		</nav>
 	</section>
 	<section class="content">
-		
-
+		<div class="container mt-3">
+			<div class="card border" style="width: 18rem;">
+				<img src="images/biryani.jpg" class="card-img-top" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Hydrabadi Biryani</h5>
+					<p class="card-text">In India, the eternal favourite for a special Sunday lunch or a party dish is definitely a
+						perfectly layered Chicken
+						Biryani</p>
+					<a href="recipies/biryani.html" class="btn btn-primary">Recipe</a>
+				</div>
+			</div>
+		</div>
 	</section>
 
 
