--- a/recipies/biryani.html
+++ b/recipies/biryani.html
@@ -6,16 +6,29 @@
 	<title>
 		Biryani
 	</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div class="container">
-		<h1>The Biryani</h1>
-		<img src="images/biryani.jpg" alt="Biryani">
-		<p>Chicken Biryani
-			Chicken Biryani Recipe Card
-			EmailSavePrint
-			In India, the eternal favourite for a special Sunday lunch or a party dish is definitely a perfectly layered Chicken Biryani, dum cooked to perfection! And it’s a visual delight too – a beautiful array of long-grained rice, tender chicken and pungent spices studded with fresh mint and coriander, topped with fried onions and boiled egg wedges. Chicken is a good quality protein and when combined with rice, herbs, spices and yogurt, it makes a healthy and filling one pot meal – like every classic chicken dum biryani should be. Just serve it piping hot essentially with a raita and salad or kachumber and wait for all the praises coming your way! I would also suggest trying out this recipe of Brown Rice Biryani with Chutney Chicken. 
+	<section class="header">
+		<nav class="navbar navbar-expand-sm navbar-light bg-light">
+			<div class="container d-flex justify-content-end">
+				<a href="../index.html" class="navbar-brand fw-bold me-auto">The Odin Recipies</a>
+				<ul class="navbar-nav">
+					<li class="nav-item"><a href="#" class="nav-link">Featured</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">Catagories</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">Tags</a></li>
+				</ul>
+			</div>
+		</nav>
+	</section>
+	<!-- <div class="container">
+		<h1 class="text-center">The Biryani</h1>
+		<img class="text-center" src="../images/biryani.jpg" alt="Biryani">
+		<p>In India, the eternal favourite for a special Sunday lunch or a party dish is definitely a perfectly layered Chicken Biryani, dum cooked to perfection! And it’s a visual delight too – a beautiful array of long-grained rice, tender chicken and pungent spices studded with fresh mint and coriander, topped with fried onions and boiled egg wedges. Chicken is a good quality protein and when combined with rice, herbs, spices and yogurt, it makes a healthy and filling one pot meal – like every classic chicken dum biryani should be. Just serve it piping hot essentially with a raita and salad or kachumber and wait for all the praises coming your way! I would also suggest trying out this recipe of Brown Rice Biryani with Chutney Chicken. 
 		</p>
 		<p>
 			<strong>Ingredients for Chicken Biryani Recipe:</strong>
@@ -52,6 +65,6 @@
 		<p>Add sliced onions and sauté. Add slit green chillies and chicken cubes and continue to sauté. Add turmeric powder and mix. Add tomatoes and salt and mix. Add ginger-garlic paste, red chilli powder and yogurt. Mix well.</p>
 		<p>Add half the fried brown onions. Add the boiled rice on top. Sprinkle garam masala powder, ginger strips, mint leaves and coriander leaves. Sprinkle milk, rose water and remaining browned onions.</p>
 		<p>Cover and cook on low heat for about ten minutes. Garnish with the egg slices and serve hot.</p>
-	</div>
+	</div> -->
 </body>
 </html>
